--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   
   # Maps
   google_maps_flutter: ^2.5.3
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
   geolocator: ^10.1.0
   geocoding: ^2.1.1
   
@@ -63,6 +65,7 @@ dependencies:
   intl: ^0.19.0
   uuid: ^4.2.1
   share_plus: ^10.1.2
+  url_launcher: ^6.2.2
   
   # Charts
   fl_chart: ^0.69.0
